--- a/src/components/Pages/Events/events.scss
+++ b/src/components/Pages/Events/events.scss
@@ -1,8 +1,6 @@
-.eventsContainer {
+.eventCards {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 body {
